RESOLVED FIXED131593
Relax adoption requirements of RefCounted objects that are NeverDestroyed
https://bugs.webkit.org/show_bug.cgi?id=131593
Summary Relax adoption requirements of RefCounted objects that are NeverDestroyed
Andy Estes
Reported 2014-04-13 12:15:14 PDT
Relax adoption requirements of RefCounted objects that are NeverDestroyed
Attachments
Patch (2.29 KB, patch)
2014-04-13 12:18 PDT, Andy Estes
mitz: review+
Andy Estes
Comment 1 2014-04-13 12:18:16 PDT
Andy Estes
Comment 2 2014-04-13 18:35:57 PDT
Note You need to log in before you can comment on or make changes to this bug.