Relax adoption requirements of RefCounted objects that are NeverDestroyed https://bugs.webkit.org/show_bug.cgi?id=131593

Reviewed by Dan Bernstein.

RefCounted objects that are created by NeverDestroyed<> won't have a
RefPtr adopting them, so call relaxAdoptionRequirements().

* wtf/NeverDestroyed.h:
(WTF::NeverDestroyed::NeverDestroyed):
(WTF::NeverDestroyed::MaybeRelax::MaybeRelax):

Canonical link: https://commits.webkit.org/149674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167206 268f45cc-cd09-0410-ab3c-d52691b4dbfc