Source/WTF/wtf/NeverDestroyed.h
@@ -29,6 +29,7 @@
 #include <type_traits>
 #include <utility>
 #include <wtf/Noncopyable.h>
+#include <wtf/RefCounted.h>
 
 // NeverDestroyed is a smart pointer like class who ensures that the destructor
 // for the given object is never called, but doesn't use the heap to allocate it.
@@ -49,7 +50,7 @@ public:
     template<typename... Args>
     NeverDestroyed(Args&&... args)
     {
-        new (asPtr()) T(std::forward<Args>(args)...);
+        MaybeRelax<T>(new (asPtr()) T(std::forward<Args>(args)...));
     }
 
     operator T&() { return *asPtr(); }
@@ -63,6 +64,13 @@ private:
     // FIXME: Investigate whether we should allocate a hunk of virtual memory
     // and hand out chunks of it to NeverDestroyed instead, to reduce fragmentation.
     typename std::aligned_storage<sizeof(T), std::alignment_of<T>::value>::type m_storage;
+
+    template <typename PtrType, bool ShouldRelax = std::is_base_of<RefCounted<PtrType>, PtrType>::value> struct MaybeRelax {
+        explicit MaybeRelax(PtrType*) { }
+    };
+    template <typename PtrType> struct MaybeRelax<PtrType, true> {
+        explicit MaybeRelax(PtrType* ptr) { ptr->relaxAdoptionRequirement(); }
+    };
 };
 
 } // namespace WTF;
